Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-10555

Hit DCHECK in TmpFileGroup::RecoverWriteError

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • Impala 4.0.0
    • Impala 4.0.0
    • Backend
    • None
    • ghx-label-3

    Description

      Hit DCHECK in TmpFileGroup::RecoverWriteError() when an IO error happens during spilling to a remote path.

      Stacks:

      #0 0x00007f46fad58fb7 in raise () from /lib/x86_64-linux-gnu/libc.so.6
      #1 0x00007f46fad5a921 in abort () from /lib/x86_64-linux-gnu/libc.so.6
      #2 0x0000000005d1f4b4 in google::DumpStackTraceAndExit() ()
      #3 0x0000000005d148ad in google::LogMessage::Fail() ()
      #4 0x0000000005d1619d in google::LogMessage::SendToLog() ()
      #5 0x0000000005d1420b in google::LogMessage::Flush() ()
      #6 0x0000000005d17e09 in google::LogMessageFatal::~LogMessageFatal() ()
      #7 0x00000000036ebd84 in impala::TmpFileGroup::RecoverWriteError (this=0x7ffcdb4a9610, handle=0xd622d00, write_status=...)
      at /home/yida/Impala/be/src/runtime/tmp-file-mgr.cc:1383
      #8 0x00000000036eb88f in impala::TmpFileGroup::WriteComplete (this=0x7ffcdb4a9610, handle=0xd622d00, write_status=...)
      at /home/yida/Impala/be/src/runtime/tmp-file-mgr.cc:1355
      #9 0x00000000036e9054 in impala::TmpFileGroup::<lambda(const impala::Status&)>::operator()(const impala::Status &) const (__closure=0x7f46cb8d64e0, write_status=...)
      at /home/yida/Impala/be/src/runtime/tmp-file-mgr.cc:1188

      Attachments

        Issue Links

          Activity

            People

              baggio000 Yida Wu
              baggio000 Yida Wu
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: